<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.salvador.personas.Modificar">

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtIdM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_dui"/>
        <Button
            android:id="@+id/btnBuscarM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblBuscar"/>

    </LinearLayout>

    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/txtNombreM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_nombre"
        />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnActualizarM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_actualizar"
            />

        <Button
            android:id="@+id/btnEliminarM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_eliminar"
            />

        <Button
            android:id="@+id/btnLimpiarM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_limpiar"
            />


    </LinearLayout>


</LinearLayout>
